# OptiDrive

./: .gitignore  docker-compose.yaml  manage.py  optifleme.py  pyproject.toml
dash/: urls.py
dash/views/: __init__.py  auth.py  index.py
files/: models.py
files/migrations/: 0001_initial.py  0002_items_global_shared.py  0003_remove_items_real_path_remove_items_size_and_more.py
opti_drive/: asgi.py  settings.py  urls.py  wsgi.py
templates/: dash.html  file_edit.html  file_new.html  foder_new.html
templates/auth/: login.html
templates/block/: base.html  nav.html
