[tool.poetry]
name = "optidrive"
version = "0.1.0"
description = ""
authors = ["msterhuj <gabin.lanore@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
rich = "^13.4.2"
minio = "^7.1.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
